<resources>
    <string name="app_name">Movies</string>
    <string name="please_wait">Please wait</string>
    <string name="articles">movies</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="exit_app">Really exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="application_made_by_algebra_students_2021">Algebra Android project 2022</string>
    <string name="published_date">Date of show</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
</resources>