<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragments"
    app:startDestination="@id/menuArticles">

    <fragment
        android:id="@+id/menuArticles"
        android:name="hr.algebra.articles.view.MoviesFragment"
        android:label="@string/articles"
        tools:layout="@layout/fragment_articles"/>

    <fragment
        android:id="@+id/menuMap"
        android:name="hr.algebra.articles.view.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map"/>

    <fragment
        android:id="@+id/menuAbout"
        android:name="hr.algebra.articles.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>

</navigation>