<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/llViewArticlePadding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@drawable/newspaper" />

        <LinearLayout
            android:layout_marginTop="@dimen/llViewArticleMarginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/published_date"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="yyyy-MM-ddThh:mm:ss"/>

        <TextView
            android:text="@string/title"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text=" dummy text ever since the 1500s" />

        <TextView
            android:text="@string/director"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Action" />

        <TextView
            android:text="@string/genre"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Action" />

        <TextView
            android:text="@string/description"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc." />

    </LinearLayout>

</ScrollView>